<resources>
    <string name="app_name">GitUserHub</string>

    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="empty_data">Sorry! we can\'t find that user</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="auto">Auto</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="settings">Settings</string>
    <string name="app_logo">App Logo</string>
    <string name="favorite">Favorite User</string>
    <string name="remove">Remove</string>
    <string name="share">Share</string>
    <string name="empty_favorite">You don\'t have any favorite users</string>
</resources>